--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <label for="company">Company:</label>
         <input type="text" id="company" name="company"><br><br>
 
+        <label for="salary">Salary:</label>
+        <input type="text" id="salary" name="salary"><br><br>
+
         <label for="location">Location:</label>
         <input type="text" id="location" name="location"><br><br>
 
@@ -37,11 +40,14 @@
         <label for="skills">Skills Required:</label>
         <input type="text" id="skills" name="skills"><br><br>
 
+        <label for="qualification">Qualification:</label>
+        <input type="text" id="qualification" name="qualification"><br><br>
+
         <label for="date">Date Posted:</label>
         <input type="date" id="date" name="date"><br><br>
 
         <label for="link">Link to Job Posting:</label>
-        <input type="url" id="link" name="link"><br><br>
+        <input type="text" id="link" name="link"><br><br>
 
         <input type="hidden" id="editIndex" value="">
         <!--<button id="contactModalButton" type="button">Add Contact</button>-->
