--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
     <form id="jobForm">
         <!-- Add all your input fields for the job post form. Example: -->
         <label for="title">Job Title:</label>
-        <input type="text" id="title" name="title"><br><br>
+        <input type="text" id="title" name="title" placeholder="Job Title"><br><br>
 
         <label for="company">Company:</label>
-        <input type="text" id="company" name="company"><br><br>
+        <input type="text" id="company" name="company" placeholder="Company Name"><br><br>
 
         <label for="salary">Salary:</label>
-        <input type="text" id="salary" name="salary"><br><br>
+        <input type="text" id="salary" name="salary" placeholder="Salary"><br><br>
 
         <label for="location">Location:</label>
-        <input type="text" id="location" name="location"><br><br>
+        <input type="text" id="location" name="location" placeholder="Job Location"><br><br>
 
         <label for="description">Job Description:</label>
-        <input type="text" id="description" name="description"><br><br>
+        <input type="text" id="description" name="description" placeholder="Job Description"><br><br>
 
         <label for="skills">Skills Required:</label>
-        <input type="text" id="skills" name="skills"><br><br>
+        <input type="text" id="skills" name="skills" placeholder="Hard Skills, Soft Skill"><br><br>
 
         <label for="qualification">Qualification:</label>
-        <input type="text" id="qualification" name="qualification"><br><br>
+        <input type="text" id="qualification" name="qualification" placeholder="Job Requirements"><br><br>
 
         <label for="date">Date Posted:</label>
         <input type="date" id="date" name="date"><br><br>
 
         <label for="link">Link to Job Posting:</label>
-        <input type="text" id="link" name="link"><br><br>
+        <input type="text" id="link" name="link" placeholder="URL to Job Posting"><br><br>
 
         <input type="hidden" id="editIndex" value="">
         <!--<button id="contactModalButton" type="button">Add Contact</button>-->
