--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     
 
     <!-- Include your JavaScript files. Assuming they are external. -->
+    <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
     <script src="index.js" charset="UTF-8"></script>
 
 </body>
