--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
     
 
     <!-- Include your JavaScript files. Assuming they are external. -->
-    <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docx@7.1.0/build/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script src="index.js" charset="UTF-8"></script>
 
 </body>
